wajig (2.0.49) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]

  * UPGRADE: Don't automatically do an "apt-get update" with the backup option;
    the behaviour is not standard, and is not so-damn-fast.

  * UPGRADE: Add command line argument for --backup to specify target directory.
    * Used to be "wajig --backup upgrade BKDIR".
    * Now it's "wajig --backup=BKDIR upgrade".

  * UPGRADE: Proceed to upgrade after using -b|--backup option.

  * UPGRADE: Remove the option to install listed packages (IE, "wajig upgrade
    pkgname" is equivalent of "wajig install pkgname"). This helps reduce
    code complexity.

  * CHANGELOG: Now only displays uninstalled entries (new changes) by default.
    This makes the NEWS command, which was to only display the latest entry,
    redundant, and therefore removed. (Closes: #424668).

  * CHANGELOG: Add -v|--verbose=1 option to display the whole thing. This was
    the default option, but suggestion offered in #424668 (see above) is a
    better default.

  * CHANGELOG: Add -x|--pager option to allow scrolling. This also implies
    -v|--verbose=1 (see above).

  * DIST-UPGRADE: Add -b|--backup=BKDIR option to allow backing up of packages
    before dist-upgrade.

  * BUILD: Now uses sudo instead of fakeroot to avoid permission-related.
    build failures for some packages (EG, fakeroot & cdbs). (Closes: #464003).

  * Fix a parsing bug where "wajig changelog libgtk2.0-0" didn't work.

 -- Graham Williams <Graham.Williams@togaware.com>  Sun, 22 Aug 2010 19:25:42 +1000

wajig (2.0.48) unstable; urgency=low

  * Add new command ADDREPO to add a Launchpad PPA. Uses
    add-apt-repository. (Tshepang Lekhonkhobe)
  
  * Add -b (backup) option to UPGRADE command so it is easier to revert to
    a previous state if a problem arises. Uses dpkg-repack. (Tshepang
    Lekhonkhobe)
  
  * Cleanup debian meta data and add unit testing and cleanup various
    python code and improve readability and upgrade deprecated string